=== Opus Primus changelog.txt ===
Last revised April 6, 2015
Please note, the Opus Primus copyright can be found at the end of this file.

= Version 1.4 =
* Released ...

= Code =
* Added `widgets` to the HTML5 theme supported items
* Change all classes to a singleton style
* Ensure `$pagination` has been initialized in `OpusPrimusNavigation::pagination` method
* Moved the `support_comment` method back into the `OpusPrimusStructures` class
* Moved the `before_comment_form` and `comments_form_closed` methods back into the `OpusPrimusComments` class
* Removed `$screen` parameter as not necessary in Taglines Stanza
* Renamed file `class.OpusPrimusHeaders.php` to `class.OpusPrimusHeader.php` for consistency

= CSS =
* Adjusted CSS to not reference `li` elements in default widget styles

= Miscellaneous =
* Continue removal of extraneous end of structure comments ...

/** ------------------------------------------------------------------------- */
= Version 1.3.4 =
* Released March 2015

= Code =
* Used a more specific element identifier for the SlickNav `prependTo` parameter

= Miscellaneous =
* Continue removal of extraneous end of structure comments ...

/** ------------------------------------------------------------------------- */
= Version 1.3.3 =
* Released March 2015
* Added sanity checks to ensure there is actually an image in use when returning the featured image view.

/** ------------------------------------------------------------------------- */
= Version 1.3.2 =
* Released March 2015
* Added support for the `title` tag via `add_theme_support` function

/** ------------------------------------------------------------------------- */
= Version 1.3.1 =
* Released March 2015

= Code =
* Added `get_the_posts_pagination` for navigation between pages of posts
* Added `hide_category_widget_list_items` method and related hook
* Added some escaping sanitization and linked Featured Image to post via the post ID