@@ -6,7 +6,7 @@ Version: 1.4-alpha
 Author: Edward Caissie
 Author URI: http://edwardcaissie.com/
 WordPress Required Version: 4.1
-WordPress Tested Version: 4.1.1
+WordPress Tested Version: 4.2
 Tags: black, white, gray, light, one-column, two-columns, three-columns, right-sidebar, responsive-layout, fluid-layout, custom-background, custom-header, custom-menu, featured-images, flexible-header, post-formats, sticky-post, threaded-comments
 Text Domain: opusprimus
 License: GNU General Public License v2
